--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Hello Guys?</h1>
+        <h1>Hello Guys!</h1>
 
         <script type="text/javascript" src="bundle.js"></script>
     </body>
